# catcher-bot

./: .coveragerc  .gitignore  .pylintrc  README.md  app.py  bot_config.yaml  init.py  logger.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
catcher_bot/: app.py
catcher_bot/core/: bot_context.py  config.py  logger.py
catcher_bot/interface/exchange/: binance_class.py
catcher_bot/model/: strategy_config.py  strategy_instance.py
catcher_bot/strategies/: sma_cross.py
catcher_bot/view/: plot.py
config_examples/: bot_config.yaml  porfolio_risk.yaml  sma_cross.yaml
controller/: queue.py  strategy_dispatcher.py  subscription_organizer.py
core/: bot_context.py  config.py  init.py  logger.py  setup_strategies.py
exchanges/: exchange.py
interface/: subscriber.py
interface/exchange/: binance_class.py  connector.py  exchange.py  exchange_class.py
model/: strategy.py  strategy_config.py  strategy_instance.py
scripts/: build-18n.sh  build-docs.sh
src/catcher_bot/: app.py
src/catcher_bot/core/: bot_config.py  bot_configurator.py  bot_context.py  component_configs.py  i18n.py  import_exchanges.py  logger.py  (+3 more)
src/etl/: data_entities.py  process.py  timeframe.py
src/provider/: connector.py  data_entities.py
strategies/: sma_cross.py
tests/: .pylintrc  conftest.py  context.py  coverage_report.sh  logger_test.py  pytest.ch  utiltest.py
tests/_performance/: queue_performace_test.py
tests/core/: bot_context_test.py  config_test.py  init_test.py  logger_test.py  setup_strategies_test.py
tests/functional/: app_test.py
tests/interface/: exchange_test.py
tests/model/: strategy_config_test.py  strategy_instance_test.py
tests/performance/: queue_performace_test.py
tests/resources/: mock_bot_config.yaml
tests/view/: logger_test.py  plot_test.py
view/: logger.py  plot.py
(+78 files in other folders)
